# m2-elt

./: .dockerignore  .env.example  .gitignore  README.md  cloudbuild.yaml  nginx-dagster.conf  run-dagster.sh
.github/workflows/: deploy-dash.yml  deploy-grafana.yml  deploy-ops-portal.yml  deploy-prod.yml  deploy-streamlit.yml  deploy-superset.yml  deploy-wordcloud.yml  notify-deploys.yml
history/: runs.db
history/runs/: index.db
my-work/Charmaine/: .gitignore
my-work/Charmaine/brazil_ecommerce/: dbt_project.yml
my-work/HoongJun/dev/p1_el/webapp/: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
my-work/HoongJun/dev/p1_el/webapp/templates/: index.html
my-work/JohnPhang/notebooks/: load-cloud-sql-upsert-sgt.ipynb  load-cloud-sql.ipynb
my-work/JohnPhang/src/: (template).env
notes/: CHANGES.md  dedup_check.ipynb  gce-ssh-access.md  issues.md  setup.local.md  setup.prod.md  wipes-dagster.md
p1_el/bronze/: README.md
p1_el/olist-meltano-pg/: .gitignore  meltano.yml
p2_warehouse_design/: README.md
p3_dbt_project/brazil_ecommerce/snapshots/: reviews_snapshot.sql
p5_analytics/: app.MD
p5_analytics/dash/: .dockerignore  .gcloudignore  .gitignore
p5_analytics/streamlit/: .dockerignore
p5_analytics/superset/: .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  superset_config.py
p5_analytics/wordcloud/: .dockerignore  .gcloudignore  app.py  requirements.txt
p6_orchestration/observability/: Makefile  app.py  index.html
p6_orchestration/olist_orchestration/: DEPLOY.md  Dockerfile
(+52 files in other folders)
